--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="css/themes/all-themes.css" rel="stylesheet" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3203802670121740"
+     crossorigin="anonymous"></script>
 </head>
 
 <body class="theme-red">
